2009-11-21  Carles Pina i Estany <carles@pina.cat>
2009-11-21  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub-mkrescue.in: Recognize `--override-directory' option.
	(process_input_dir): New function.  Process an arbitrary input
	directory.
	Misc adjustments to support both "override mode" and system-wide mode.

2009-11-20  Felix Zielcke  <fzielcke@z-51.de>

	* configure.ac (UNIFONT_BDF): Rename to ...
	(FONT_SOURCE): ... this.  Update all users.

2009-11-20  Felix Zielcke  <fzielcke@z-51.de>

	* configure.ac: Add `/usr/share/fonts/X11/misc/unifont.pcf.gz'
	to the list of unifont files to look for.

2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>

	Patch from Joe Auricchio <jauricchio@gmail.com>
	* commands/minicmd.c (grub_mini_cmd_clear): New function.
	(GRUB_MOD_INIT(minicmd)): Register grub_mini_cmd_clear().
	(GRUB_MOD_FINI(minicmd)): Unregister grub_mini_cmd_clear().

2009-11-19  Felix Zielcke  <fzielcke@z-51.de>

	* Makefile.in (install-local): Add a missing backslash.

2009-11-19  Felix Zielcke  <fzielcke@z-51.de>

	* include/grub/x86_64/io.h: New file.

2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>

	* conf/i386-pc.rmk (grub_setup_SOURCES): Add `gnulib/progname.c'.
	* util/i386/pc/grub-setup.c: Include `<grub/i18n.h>'.
	Include `"progname.h"'.
	(main): Initialize gettext.
	* util/i386/pc/grub-setup.c: Gettexttize.
	* util/i386/pc/grub-mkimage.c: Likewise.

	* Makefile.in (po/*.po): Redefine as ...
	($(foreach lang, $(LINGUAS), po/$(lang).po)): ... this.

	* po/POTFILES: Add `util/i386/pc/grub-setup.c'.

2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>

	* conf/common.rmk (grub_mkisofs_SOURCES): Add `gnulib/progname.c'.
	* util/mkisofs/mkisofs.c: Include `"progname.h"'.
	(program_name): Remove.
	(main): Initialize gettext support.
	* util/mkisofs/mkisofs.h: Include `<locale.h>'.
	Include `<libintl.h>'.
	(_): New macro.

	* util/mkisofs/eltorito.c: Gettexttize.
	* util/mkisofs/joliet.c: Likewise.
	* util/mkisofs/mkisofs.c: Likewise.